# wesnoth-zkpsi

./: Cargo.toml  README.md  base_compil.sh  base_test.sh  compile.sh  groth.rs  license.txt  toy_bn254.rs
phase1/: circuit.circom  exchange.circom  gen_input.py
phase2/: circuit.circom  exchange.circom  gen_input.py
phase2nova/: NOVAdesign.md  circuit.circom  gen_input.py  hash.circom  output.txt  sponge.circom  start.json
phase3/: circuit.circom  gen_input.py
src/: main.rs  unit.rs
wesnoth-zkpsi/hash/: anemoi.circom  hash_state.circom  sponge.circom
wesnoth-zkpsi/phase1/: circuit.circom  exchange.circom  functions.circom  regles.circom
wesnoth-zkpsi/phase2/: circuit.circom  exchange.circom  gen_input.py
wesnoth-zkpsi/phase2nova/: NOVAdesign.md  circuit.circom  exchange.circom  gen_input.py  regles.circom
wesnoth-zkpsi/phase3/: circuit.circom  gen_input.py
wesnoth-zkpsi/roll_hash/: anemoi.circom  roll_hash.circom
