[package]
name = "Circom-Nouvelle-Ecosse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
halo2curves = { version = "0.1.0", features = ["bits", "derive_serde"] }
nova-scotia = "0.5.0"
nova-snark = "0.23.0"
num-bigint = { version = "0.4", features = ["rand"] }
serde = "1.0.202"
serde_json = "1.0.117"
rand = "0.8.5"
tempfile = "3"

[profile.release-with-debug]
inherits = "release"
debug = true
debug-assertions = true
